Fixed cards overlapping with header during flip animation & flip states now revert to default when switching between View All/Single Card modes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
 .Card-wrapper {
+  position: relative;
+  z-index: 0;
   padding-top: 70px;
   display: flex;
   flex-direction: column;
