--- a/client/src/FlipCard.css
+++ b/client/src/FlipCard.css
@@ -1,5 +1,7 @@
 /* All card view */
 .flip-card-wrapper {
+  position: relative;
+  z-index: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -23,6 +25,8 @@
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
+  position: relative;
+  z-index: -1 !important;
 }
 
 /* This container is needed to position the front and back side */
